커스텀 하단 네비게이션 바 적용

--- a/myinatagram/src/main/AndroidManifest.xml
+++ b/myinatagram/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name=".InstagramActivity"
+            android:name=".ui.InstagramActivity"
             android:theme="@style/InstagramTheme" />
 
         <provider
