--- a/myinatagram/build.gradle
+++ b/myinatagram/build.gradle
@@ -34,14 +34,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
     implementation deps.androidx.appcompat
     implementation deps.androidx.core
 
     implementation deps.glide.glide
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     annotationProcessor deps.glide.annotation
 
     implementation deps.rx.rxJava
     implementation deps.rx.rxAndroid
-
 }
