--- a/myinatagram/build.gradle
+++ b/myinatagram/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation deps.androidx.appcompat
     implementation deps.androidx.core
