--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <!-- internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".StoreApplication"
         android:allowBackup="false"
