--- a/myinatagram/build.gradle
+++ b/myinatagram/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+
+    implementation 'com.github.yalantis:ucrop:2.2.4-native'
+
     annotationProcessor deps.glide.annotation
 
     implementation deps.rx.rxJava
