--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets.test.resources.srcDirs += ["src/test/json"]
 }
 
 dependencies {
@@ -46,11 +48,15 @@ dependencies {
     implementation deps.rx.rxJava
     implementation deps.rx.rxAndroid
 
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //https://mvnrepository.com/artifact/org.json/json
+    testImplementation 'org.json:json:20190722'
 
 }
